--- a/WhatRoute.Sample/WhatRoute.Sample.csproj
+++ b/WhatRoute.Sample/WhatRoute.Sample.csproj
@@ -174,6 +174,9 @@
   <ItemGroup>
     <Content Include="Views\Shared\Sample.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Shared\Menu.cshtml" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
